--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li>Shoes</li>
+		<li>Mobile</li>
+		<li>Table</li>
+	</ol>
+	
+
+	<ul>Himachal
+	<ul>Uttrakhand</ul>
+	<ul>Uttar Pradesh</ul>
+	
 
 </body>
 
