--- a/main.html
+++ b/main.html
@@ -15,12 +15,12 @@
 		<li>Mobile</li>
 		<li>Table</li>
 	</ol>
-	
 
-	<ul>Himachal
-	<ul>Uttrakhand</ul>
-	<ul>Uttar Pradesh</ul>
-	
+	<ul>
+		<li>Himachal</li>
+		<li>Uttarakhand</li>
+		<li>Jammu & Kashmir</li>
+	</ul>	
 
 </body>
 
