--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>data-ns-test</h1>
 	<ol>
-		<li>Shoes</li>
+		<li value="shoppingList">Shoes</li>
 		<li>Mobile</li>
 		<li>Table</li>
 	</ol>
