--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 	<h1>data-ns-test</h1>
 	<ol>
 		<li value="shoppingList">Shoes</li>
-		<li>Mobile</li>
-		<li>Table</li>
+		<li value="shoppingList">Mobile</li>
+		<li value="shoppingList">Table</li>
 	</ol>
 
 	<ul>
-		<li>Himachal</li>
-		<li>Uttarakhand</li>
-		<li>Jammu & Kashmir</li>
+		<li value="holidayList">Himachal</li>
+		<li value="holidayList">Uttarakhand</li>
+		<li value="holidayList">Jammu & Kashmir</li>
 	</ul>	
 
 </body>
