--- a/main.html
+++ b/main.html
@@ -10,15 +10,15 @@
 	<!-- the entire body must be written by student -->
 	<h1>data-ns-test</h1>
 	<ol>
-		<li value="shoppingList">Shoes</li>
-		<li value="shoppingList">Mobile</li>
-		<li value="shoppingList">Table</li>
+		<li data-ns-test="shoppingList">Shoes</li>
+		<li data-ns-test="shoppingList">Mobile</li>
+		<li data-ns-test="shoppingList">Table</li>
 	</ol>
 
 	<ul>
-		<li value="holidayList">Himachal</li>
-		<li value="holidayList">Uttarakhand</li>
-		<li value="holidayList">Jammu & Kashmir</li>
+		<li data-ns-test="holidayList">Himachal</li>
+		<li data-ns-test="holidayList">Uttarakhand</li>
+		<li data-ns-test="holidayList">Jammu & Kashmir</li>
 	</ul>	
     <script type="text/javascript" src="./script.js">
 </script>
